# ThePulsars

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
client-include/c/: prolo.h
client-include/cpp/: prolo.hh
client-include/pas/: prolo.pas
cmake/: CJSON.cmake  FindCJSON.cmake  GetGitRevisionDescription.cmake
data/: CMakeLists.txt  Makefile.am  Makefile.in  akx.xpm  akx_0.xpm  akx_0_mask.xpm  akx_mask.xpm  ffwd.xpm  logo.xpm  logo_small.xpm  pause.xpm  play.xpm  r4d2.xpm  r4d2_0.xpm  r4d2_0_mask.xpm  r4d2_mask.xpm  step.xpm
data/clients/: antoine_jacquet.c  frederic_jacquot.c  jean-didier_febvay.pas  leo_cacheux.c
data/map/: 2players.map  2players.map.json  4players.map  Makefile.am  Makefile.in  center.map  pulse-4.map  small.map
doc/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  TODO  bouvier.man  gtk-client.man  map.man  mserver.sql  prologin.man  protocole.txt  server.man
doc/sujet/: Makefile  sujet.tex
gclient/: CMakeLists.txt  gamearea.c  gen_bigmap.c  gen_bigmap2.c  gen_minimap.c  gtk.c  init.c  load_map.c  main.c  mainbox.c  map.c  menubar.c  minimap.c  network.c  pixbuf.c  players.c  stats.c  statusbar.c  toolbar.c
gclient/include/: client.h  client_gtk.h
gtkutil/: CMakeLists.txt  callbacks.c  clist.c  create.c  filesel.c
include/: general.h  gtkutil.h  pulsarnet.h
include/client/c/: prolo.h
include/client/c++/: prolo.hh
include/client/cpp/: prolo.hh
meta-client/: CMakeLists.txt  Makefile.am  bitmaps.c  champions.c  gtk_main.c  init.c  main.c  maps.c  matchs.c  menubar.c  mysql.c  mysql_list.c  run_match.c  run_tournois.c  tournois.c
meta-client/include/: mclient.h  mysql.h  tournois.h
pulsarnet/: CMakeLists.txt  check.c  error.c  misc.c  net_private.h  open.c  read.c  write.c
server/: CMakeLists.txt  bouvier.c  client.c  conf.c  exec.c  game.c  init.c  ipc.c  main.c  map.c  map_parser.c  message.c  network.c  network_connect.c  objects.c  parser.c  player.c  plugins.c  pulse.c  time.c
server/include/: action.h  client.h  conf.h  erreur.h  exec.h  game.h  ipc.h  map.h  message.h  network.h  objects.h  parser.h  player.h  plugins.h  private.h  public.h  pulse.h  server.h  time.h
src/: Makefile.am  Makefile.in  cleanshm.sh  general.h
src/gtk-client/: Makefile.am  Makefile.in  client.h  client_gtk.h  gen_bigmap2.c  gen_minimap.c  gtk.c  init.c  load_map.c  mainbox.c  map.c  minimap.c  pixbuf.c  players.c  stats.c  statusbar.c  toolbar.c
src/gtkutil/: Makefile.am  Makefile.in  create.c  gtkutil.h
src/meta-client/: Makefile.in  maps.c  mclient.h  mysql.c  mysql.h  mysql_list.c  tournois.h
src/netlib/: Makefile.am  Makefile.in  check.c  error.c  misc.c  net.h  net_private.h  read.c  write.c
src/server/: Makefile.am  Makefile.in  action.h  bouvier.c  client.c  client.h  conf.h  exec.c  exec.h  game.c  init.c  ipc.c  ipc.h  main.c  map.c  map_parser.c  message.c  message.h  network.c  network.h  network_connect.c  objects.c  parser.h  plugins.c  plugins.h  private.h  pulse.c  server.h  time.c
