# $Id: Makefile.am,v 1.3 2001/05/06 08:37:02 kilobug Exp $

SUBDIRS		= map
data_DATA	= akx_0_mask.xpm  akx_0.xpm  akx_mask.xpm  akx.xpm \
		  r4d2_0_mask.xpm  r4d2_0.xpm  r4d2_mask.xpm  r4d2.xpm \
		  ffwd.xpm  pause.xpm  play.xpm  step.xpm \
		  logo_small.xpm  logo.xpm \
		  sand.gif

EXTRA_DIST	= $(data_DATA)
